--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,30 +1,28 @@
 version: '3.8'
 
 services:
-  # 1. Backend (Python FastAPI)
+
   server:
     build: ./server
     ports:
       - "8000:8000"
     volumes:
-      - ./server:/app      # Biar kalau edit Python, langsung berubah
+      - ./server:/app      
     depends_on:
       - mongo
 
-  # 2. Frontend (React + Vite)
   client:
     build: ./client
     ports:
       - "5173:5173"
     volumes:
-      - ./client:/app       # <--- KUNCI: Biar kodingan Windows "ngaca" ke Docker
-      - /app/node_modules   # <--- PENGAMAN: Biar folder sistem Linux gak rusak sama Windows
+      - ./client:/app      
+      - /app/node_modules   
     environment:
-      - CHOKIDAR_USEPOLLING=true # Biar Docker sadar kalau file Windows berubah
+      - CHOKIDAR_USEPOLLING=true 
     depends_on:
       - server
 
-  # 3. Database (MongoDB)
   mongo:
     image: mongo:latest
     ports:
